new changes for products

--- a/policies.html
+++ b/policies.html
@@ -100,7 +100,7 @@
 		<div class="container box_1170">
 			<h3 class="text-heading">Quality Policy</h3>
 			<p class="sample-text">
-At “Sai Precision Industry” we believe in understanding our customer needs & expectations and constantly looking at ways of improving the quality of our products and deliverables. This also prompted us to structure our quality systems to suit the requirements of the international standards with better understanding that this will be another step towards providing quality products to our customers. We at Sai Precision Industry believe in continual improvement program & has established quality objectives which are reviewed periodically by improving our work methods, upgrading our standard operating procedures, create safe & healthy work environment & upgrading skills of each employee time to time. This quality policy will be reviewed periodically to ensure it remains relevant and appropriate to the changing needs of the organization. All employees are made part of this quality system and suggest ways of enhancing quality and efficiency. Customer delight is our motto.
+At “Sai Precision Industry” we believe in understanding our customer needs & expectations and constantly looking at ways of improving the quality of our products and deliverables. This also prompted us to structure our quality systems to suit the requirements of the international standards with better understanding that this will be another step towards providing quality products to our customers. We at Sai Precision Industry believe in continual improvement program & has established quality objectives which are reviewed periodically by improving our work methods, upgrading our standard operating procedures, create safe & healthy work environment & upgrading skills of each employee time to time. This quality policy will be reviewed periodically to ensure it remains relevant and appropriate to the changing needs of the organization. All employees are made part of this quality system and suggest ways of enhancing quality and efficiency.<b> Customer delight is our motto</b>.
 
 			</p>
 			<br/> <br/>
@@ -121,7 +121,7 @@ safety conscious periodically.
 
 We will achieve safe and healthy workplace through all employee
 participation.
-Safety begins with teamwork and will be our first choice.
+<b>Safety begins with teamwork and will be our first choice</b>.
 
 
 			</p>
