--- a/products.html
+++ b/products.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-xl-6 col-md-6">
                     <div class="review-thumb">
-                        <img src="img/project/review-thumb.jpg" alt="">
+                        <img src="img/project/ssflange.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="review-thumb">
-                        <img src="img/project/review-thumb.jpg" alt="">
+                        <img src="img/project/studrod.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-6">
@@ -186,7 +186,7 @@
                 </div>
                 <div class="col-xl-6 col-md-6">
                     <div class="review-thumb">
-                        <img src="img/project/review-thumb.jpg" alt="">
+                        <img src="img/project/loweringjig.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-md-6">
                     <div class="review-thumb">
-                        <img src="img/project/review-thumb.jpg" alt="">
+                        <img src="img/project/outerjig.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-6">
@@ -252,13 +252,79 @@
                 </div>
                 <div class="col-xl-6 col-md-6">
                     <div class="review-thumb">
-                        <img src="img/project/review-thumb.jpg" alt="">
+                        <img src="img/project/reducer.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- project-review-area-end -->
+
+    	 <!-- project-review-area-start -->
+         <div class="project-review-area section-padding">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-6 col-md-6">
+                        <div class="review-thumb">
+                            <img src="img/project/bottom.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-md-6">
+                        <div class="single-review">
+                            <h2>Bottom</h2>
+                            <p>
+                                Two midst that won't place waters likeness. Them place good. Darkness meat moved creeping
+                                whales firmament light so were from and given saying light was his fruitful two.
+                            </p>
+                            <p>
+                                Creature saying in was heaven appear in dominion can't sixth heaven winged lights bearing
+                                evening likeness. Above man thing. Fourth lights. That had you're stars.
+                            </p>
+                            <p>
+                                Sixth called tree over that fill be blessed our herb Air they're for dry male upon tree
+                                waters whose second open, of replenish created from green moved dry third fill don't tree
+                                green. Life.Two midst that won't place waters likeness. Darkness meat moved creeping whales
+                                firmament light so were from and given saying.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- project-review-area-end -->
+    
+            <!-- project-review-area-start -->
+        <div class="project-review-area section-padding">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-6 col-md-6">
+                        <div class="single-review">
+                            <h2>Double Clamp</h2>
+                            <p>
+                                Two midst that won't place waters likeness. Them place good. Darkness meat moved creeping
+                                whales firmament light so were from and given saying light was his fruitful two.
+                            </p>
+                            <p>
+                                Creature saying in was heaven appear in dominion can't sixth heaven winged lights bearing
+                                evening likeness. Above man thing. Fourth lights. That had you're stars.
+                            </p>
+                            <p>
+                                Sixth called tree over that fill be blessed our herb Air they're for dry male upon tree
+                                waters whose second open, of replenish created from green moved dry third fill don't tree
+                                green. Life.Two midst that won't place waters likeness. Darkness meat moved creeping whales
+                                firmament light so were from and given saying.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-md-6">
+                        <div class="review-thumb">
+                            <img src="img/project/doubleclamp.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- project-review-area-end -->
 	
       <!-- location-area-start -->
     <div class="addres-area black-bg section-padding">
