--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
                     <div class="row">
                         <div class="col-xl-7 offset-xl-1 col-lg-7">
                             <div class="slider-content">
-                                <p>Quality work. Trustable service. Dedicated team</p>
-                                <h3>We provide your Industrial solution</h3>
+                                <h3>Quality work.<br/> Trustable service.<br/> Dedicated team.</h3>
                             </div>
                         </div>
                     </div>
@@ -98,8 +97,7 @@
                     <div class="row">
                         <div class="col-xl-7 offset-xl-1 col-lg-7">
                             <div class="slider-content">
-                                <p>Quality work. Trustable service. Dedicated team</p>
-                                <h3>We provide your Industrial solution</h3>
+                                <h3>Quality work.<br/> Trustable service.<br/> Dedicated team.</h3>
                             </div>
                         </div>
                     </div>
@@ -110,8 +108,7 @@
                     <div class="row">
                         <div class="col-xl-7 offset-xl-1 col-lg-7">
                             <div class="slider-content">
-                                <p>Quality work. Trustable service. Dedicated team</p>
-                                <h3>We provide your Industrial solution</h3>
+                                <h3>Quality work.<br/> Trustable service.<br/> Dedicated team.</h3>
                             </div>
                         </div>
                     </div>
